--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@ body{
   --color-brand1: #12F7D6;
   --color-brand2: #98FAEC;
   --color-grey: #43454D;
-  --color-html: #E54F26;
-  --color-css: #0C73B8;
+  --color-html: #444;
+  --color-css: #3178C6;
   --color-js: #E7A020;
   --color-react: #28A9E0;
 
